--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "laravel/framework": "5.5.*",
         "laravelcollective/html": "^5.2.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravolt/avatar": "^2.0",
         "lubart/form": "^1.0"
     },
