--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
+        "doctrine/dbal": "^2.5",
         "laravel/framework": "5.5.*",
         "laravelcollective/html": "^5.2.0",
         "guzzlehttp/guzzle": "^6.3",
