Add version control Automatic run just:update command after package update

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
             "Lubart\\Just\\": "src/"
         }
     },
+    "scripts": {
+        "post-update-cmd": "@php artisan just:update"
+    },
     "extra": {
         "laravel": {
             "providers": [
