--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravolt/avatar": "^3.0",
         "lubart/form": "^1.3",
-        "laravel/helpers": "^1.0"
+        "laravel/helpers": "^1.0",
+        "spatie/laravel-translatable": "^4.2"
     },
     "autoload": {
         "psr-4": {
