--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/dbal": "^2.5",
         "laravel/framework": "^6.0",
         "laravelcollective/html": "^6.0",
+        "laravel/tinker": "~1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravolt/avatar": "^3.0",
         "lubart/form": "^1.3",
