--- a/src/publish/public/mix-manifest.json
+++ b/src/publish/public/mix-manifest.json
@@ -1,5 +1,1 @@
-{
-    "/js/Just/adminApp.js": "/js/Just/adminApp.js?id=810016350e28b6f1bd35",
-    "/js/Just/app.js": "/js/Just/app.js?id=b7f12b3707bf20ec032e",
-    "/css/Just/app.css": "/css/Just/app.css?id=5d4976931af64b07336c"
-}
+{"\/js\/Just\/adminApp.js":"\/js\/Just\/adminApp.js?id=d29b3a117377b81f17fe","\/js\/Just\/app.js":"\/js\/Just\/app.js?id=b7f12b3707bf20ec032e","\/css\/Just\/app.css":"\/css\/Just\/app.css?id=2f8bf75060dfdc84b22d"}
