--- a/src/publish/public/mix-manifest.json
+++ b/src/publish/public/mix-manifest.json
@@ -1,1 +1,5 @@
-{"\/js\/Just\/adminApp.js":"\/js\/Just\/adminApp.js?id=d29b3a117377b81f17fe","\/js\/Just\/app.js":"\/js\/Just\/app.js?id=b7f12b3707bf20ec032e","\/css\/Just\/app.css":"\/css\/Just\/app.css?id=2f8bf75060dfdc84b22d"}
+{
+    "/js/Just/adminApp.js": "/js/Just/adminApp.js?id=96f4a082f9b8f5e7f841",
+    "/js/Just/app.js": "/js/Just/app.js?id=b7f12b3707bf20ec032e",
+    "/css/Just/app.css": "/css/Just/app.css?id=5a0d10e13ffccfe11f2a"
+}
