Transfer the Gallery and HTML blocks Adapt ajax uploader and remove the old JQuery Ajax Uploader

--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,13 @@
         "lubart/form": "^1.3",
         "laravel/helpers": "^1.0",
         "spatie/laravel-translatable": "^4.2",
-        "caouecs/Laravel-lang": "^4.0"
+        "laravel-lang/lang": "^8.0",
+        "ext-json": "*"
     },
     "autoload": {
+        "classmap": [
+            "src/database/factories"
+        ],
         "psr-4": {
             "Just\\": "src/",
             "Just\\Tests\\": "tests/"
