--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "doctrine/dbal": "^2.5",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^7.0",
         "laravelcollective/html": "^6.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravolt/avatar": "^3.0",
@@ -20,6 +20,7 @@
         "laravel/helpers": "^1.0",
         "spatie/laravel-translatable": "^4.2",
         "laravel-lang/lang": "~5.0",
+        "laravel/ui": "^2.0",
         "ext-json": "*"
     },
     "autoload": {
